--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -1,3 +1,28 @@
-.name {
-    font-size: 22px;
+@import "variables.scss";
+
+body {
+  margin: 0px;
+  padding: 0px;
+}
+.wrapper {
+  height: 100vh;
+  width: 100vw;
+}
+.main {
+  height: 80%;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+}
+.turn {
+  height: 50px;
+}
+
+.head {
+  background-color: $headerFooter;
+  height: 10%;
+}
+.foot {
+  background-color: $headerFooter;
+  height: 10%;
 }
