--- a/views/homeDir.html
+++ b/views/homeDir.html
@@ -1,5 +1,8 @@
 
+<!--title page or cover-->
 
-<p>{{species}}</p>
+<h1>Torchic the Cutest Pokemon</h1>
 
-<button> heya </button>
+<img src="#"/>
+
+<button> turn the page </button>
