--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -12,12 +12,9 @@ body {
   height: 80%;
   display: flex;
   flex-direction: column;
-  justify-content: flex-end;
+  justify-content: space-around;
+  align-items: center;
 }
-.turn {
-  height: 50px;
-}
-
 .head {
   background-color: $headerFooter;
   height: 10%;
