--- a/views/berryDir.html
+++ b/views/berryDir.html
@@ -3,6 +3,7 @@
 
 <img src="#"/>
 
-<p> {{name}}'s favorite snack is the {{flavor}} {{berry}}. Delicious! </p>
+<p> {{name}}'s favorite snack is the {{flavor}} {{berry}}. Delicious! You guys are best pals forever. </p>
+<p> {{myBerry}} </p>
 
-<a ui-sref="flavorText"><button> turn page </button></a>
+<a ui-sref="home"><button> read again </button></a>
