--- a/views/encounterDir.html
+++ b/views/encounterDir.html
@@ -5,4 +5,4 @@
 
 <p> Exploring in a beautiful {{habitat}} you find {{name}}. </p>
 
-<a ui-sref="nature"><button> turn page </button></a>
+<a ui-sref="desc"><button> turn page </button></a>
