--- a/views/berryDir.html
+++ b/views/berryDir.html
@@ -1,9 +1,12 @@
 
 
 
-<img src="#"/>
+<img class="berryGirl" src="../styles/assets/berryGirl.png"/>
+
+<img class="berryTorchic" src="../styles/assets/natureTorchic.png"/>
+
+<img class="berry" src="../styles/assets/berry.png"/>
 
 <p> {{name}}'s favorite snack is the {{flavor}} {{berry}}. Delicious! You guys are best pals forever. </p>
-<p> {{myBerry}} </p>
 
 <a ui-sref="home"><button> read again </button></a>
