--- a/views/encounterDir.html
+++ b/views/encounterDir.html
@@ -1,7 +1,9 @@
 
 
 
-<img src="#"/>
+<img class="girlBack" src="../styles/assets/natureGirl.png"/>
+
+<img class="torchicBack" src="../styles/assets/torchicBack.png"/>
 
 <p> Exploring in a beautiful {{habitat}} you find {{name}}. </p>
 
