--- a/views/natureDir.html
+++ b/views/natureDir.html
@@ -1,6 +1,8 @@
 
 
-<img src="#"/>
+<img class="natureGirl" src="../styles/assets/natureGirl.png"/>
+
+<img class="natureTorchic" src="../styles/assets/torchicFront.png"/>
 
 <p> Your {{name}} is so {{nature}}, it loves to eat {{preference}} things </p>
 
