--- a/views/berryDir.html
+++ b/views/berryDir.html
@@ -1,11 +1,11 @@
 
 
 
-<img class="berryGirl" src="../styles/assets/berryGirl.png"/>
+<img class="berryGirl" src="./assets/berryGirl.png"/>
 
-<img class="berryTorchic" src="../styles/assets/natureTorchic.png"/>
+<img class="berryTorchic" src="./assets/natureTorchic.png"/>
 
-<img class="berry" src="../styles/assets/berry.png"/>
+<img class="berry" src="./assets/berry.png"/>
 
 <p> {{name}}'s favorite snack is the {{flavor}} {{berry}}. Delicious! You guys are best pals forever. </p>
 
