--- a/views/descDir.html
+++ b/views/descDir.html
@@ -1,9 +1,9 @@
 
 
 
-<img class="girlBack" src="../styles/assets/natureGirl.png"/>
+<img class="girlBack" src="./assets/natureGirl.png"/>
 
-<img class="torchicFront" src="../styles/assets/torchicFront.png"/>
+<img class="torchicFront" src="./assets/torchicFront.png"/>
 
 <p> {{text}} </p>
 
