--- a/views/encounterDir.html
+++ b/views/encounterDir.html
@@ -1,9 +1,9 @@
 
 
 
-<img class="girlBack" src="../styles/assets/natureGirl.png"/>
+<img class="girlBack" src="./assets/natureGirl.png"/>
 
-<img class="torchicBack" src="../styles/assets/torchicBack.png"/>
+<img class="torchicBack" src="./assets/torchicBack.png"/>
 
 <p> Exploring in a beautiful {{habitat}} you find {{name}}. </p>
 
