--- a/views/homeDir.html
+++ b/views/homeDir.html
@@ -3,6 +3,6 @@
 
 <h1>Torchic the Cutest Pokemon</h1>
 
-<img class="home" src="../styles/assets/home.png"/>
+<img class="home" src="./assets/home.png"/>
 
 <a ui-sref="encounter"><button> turn page </button></a>
