--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -96,7 +96,7 @@ button {
   flex-direction: column;
   justify-content: space-around;
   align-items: center;
-  background-image: url("./assets/grass.png");
+  background-image: url("../assets/grass.png");
   background-repeat: repeat;
   background-size:contain;
 }
